Added classes for Statistics: StatisticsController StatisticsDTO StatisticsService StatisticsServiceImpl
application.properties:
changed port to 9090
enabled show messages in postman

SecurityConfig:
fixed h2-console
changed role name to USER

Cleanup, moved code to another branch